changes small I to capital I

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/IMG-20241020-WA0018.jpg'); margin-top: 74px;margin-top: 74px;" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('Images/IMG-20241020-WA0018.jpg'); margin-top: 74px;margin-top: 74px;" data-stellar-background-ratio="0.5">
       <div class="overlay" style="opacity:0.4"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -67,7 +67,7 @@
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 d-flex ftco-animate">
-    				<div class="img img-about align-self-stretch" style="background-image: url(images/Untitled.jpg); width: 100%;"></div>
+    				<div class="img img-about align-self-stretch" style="background-image: url(Images/Untitled.jpg); width: 100%;"></div>
     			</div>
     			<div class="col-md-6 pl-md-5 ftco-animate">
     				<h2 class="mb-4">Welcome to Kerala Cultural Centre Since 2019</h2>
