--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/IMG-20241020-WA0018.jpg'); margin-top: 74px;margin-top: 74px;" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('Images/IMG-20241020-WA0018.jpg'); margin-top: 74px;margin-top: 74px;" data-stellar-background-ratio="0.5">
       <div class="overlay" style="opacity:0.4"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -67,67 +67,67 @@
     <section class="ftco-section ftco-gallery">
     	<div class="container">
 	    	<div class="d-md-flex">
-          <!-- <img class="sppb-img-responsive" src="images/Donating-and-Sponsoring-icon.png" alt="Donating / Sponsoring" loading="lazy"> -->
-		    	<a href="images/01-1.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/01-1.jpg);">
+          <!-- <img class="sppb-img-responsive" src="Images/Donating-and-Sponsoring-icon.png" alt="Donating / Sponsoring" loading="lazy"> -->
+		    	<a href="Images/01-1.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/01-1.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/02.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/02.jpg);">
+		    	<a href="Images/02.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/02.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/03.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/03.jpg);">
+		    	<a href="Images/03.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/03.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/04.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/04.jpg);">
+		    	<a href="Images/04.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/04.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
 	    	</div>
 	    	<div class="d-md-flex">
-		    	<a href="images/05.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/05.jpg);">
+		    	<a href="Images/05.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/05.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/06.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/06.jpg);">
+		    	<a href="Images/06.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/06.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/07.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/07.jpg);">
+		    	<a href="Images/07.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/07.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/08.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/08.jpg);">
+		    	<a href="Images/08.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/08.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
 		    </div>
 		    <div class="d-md-flex">
-		    	<a href="images/09.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/09.jpg);">
+		    	<a href="Images/09.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/09.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/10.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/10.jpg);">
+		    	<a href="Images/10.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/10.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/11.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/11.jpg);">
+		    	<a href="Images/11.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/11.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="images/12.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/12.jpg);">
+		    	<a href="Images/12.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/12.jpg);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
@@ -136,12 +136,12 @@
 	    </div>
     </section>
 
-    <!-- <section class="ftco-section-3 img" style="background-image: url(images/bg_3.jpg);">
+    <!-- <section class="ftco-section-3 img" style="background-image: url(Images/bg_3.jpg);">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-md-flex">
     		<div class="col-md-6 d-flex ftco-animate">
-    			<div class="img img-2 align-self-stretch" style="background-image: url(images/bg_4.jpg);"></div>
+    			<div class="img img-2 align-self-stretch" style="background-image: url(Images/bg_4.jpg);"></div>
     		</div>
     		<div class="col-md-6 volunteer pl-md-5 ftco-animate">
     			<h3 class="mb-3">Be a volunteer</h3>
@@ -183,7 +183,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Recent Blog</h2>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(Images/image_1.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                   <div class="meta">
@@ -194,7 +194,7 @@
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(Images/image_2.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                   <div class="meta">
