--- a/causes.html
+++ b/causes.html
@@ -52,7 +52,7 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/bg_5.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('Images/bg_5.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -70,7 +70,7 @@
       	<div class="row">
       		<div class="col-md-4 ftco-animate">
       			<div class="cause-entry">
-    					<a href="#" class="img" style="background-image: url(images/cause-1.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(Images/cause-1.jpg);"></a>
     					<div class="text p-3 p-md-4">
     						<h3><a href="#">Clean water for the urban area</a></h3>
     						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -84,7 +84,7 @@
       		</div>
       		<div class="col-md-4 ftco-animate">
       			<div class="cause-entry">
-    					<a href="#" class="img" style="background-image: url(images/cause-2.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(Images/cause-2.jpg);"></a>
     					<div class="text p-3 p-md-4">
     						<h3><a href="#">Clean water for the urban area</a></h3>
     						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -98,7 +98,7 @@
       		</div>
       		<div class="col-md-4 ftco-animate">
       			<div class="cause-entry">
-    					<a href="#" class="img" style="background-image: url(images/cause-3.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(Images/cause-3.jpg);"></a>
     					<div class="text p-3 p-md-4">
     						<h3><a href="#">Clean water for the urban area</a></h3>
     						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -112,7 +112,7 @@
       		</div>
       		<div class="col-md-4 ftco-animate">
       			<div class="cause-entry">
-    					<a href="#" class="img" style="background-image: url(images/cause-4.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(Images/cause-4.jpg);"></a>
     					<div class="text p-3 p-md-4">
     						<h3><a href="#">Clean water for the urban area</a></h3>
     						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -126,7 +126,7 @@
       		</div>
       		<div class="col-md-4 ftco-animate">
       			<div class="cause-entry">
-    					<a href="#" class="img" style="background-image: url(images/cause-5.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(Images/cause-5.jpg);"></a>
     					<div class="text p-3 p-md-4">
     						<h3><a href="#">Clean water for the urban area</a></h3>
     						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -140,7 +140,7 @@
       		</div>
       		<div class="col-md-4 ftco-animate">
       			<div class="cause-entry">
-    					<a href="#" class="img" style="background-image: url(images/cause-6.jpg);"></a>
+    					<a href="#" class="img" style="background-image: url(Images/cause-6.jpg);"></a>
     					<div class="text p-3 p-md-4">
     						<h3><a href="#">Clean water for the urban area</a></h3>
     						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -171,12 +171,12 @@
       </div>
     </section>
 
-    <section class="ftco-section-3 img" style="background-image: url(images/bg_3.jpg);">
+    <section class="ftco-section-3 img" style="background-image: url(Images/bg_3.jpg);">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-md-flex">
     		<div class="col-md-6 d-flex ftco-animate">
-    			<div class="img img-2 align-self-stretch" style="background-image: url(images/bg_4.jpg);"></div>
+    			<div class="img img-2 align-self-stretch" style="background-image: url(Images/bg_4.jpg);"></div>
     		</div>
     		<div class="col-md-6 volunteer pl-md-5 ftco-animate">
     			<h3 class="mb-3">Be a volunteer</h3>
@@ -219,7 +219,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Recent Blog</h2>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(Images/image_1.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                   <div class="meta">
@@ -230,7 +230,7 @@
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(Images/image_2.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                   <div class="meta">
