--- a/event.html
+++ b/event.html
@@ -52,7 +52,7 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/02.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('Images/02.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -70,7 +70,7 @@
         <div class="row">
         	<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-1.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-1.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -87,7 +87,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-2.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-2.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -104,7 +104,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-3.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-3.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -121,7 +121,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-4.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-4.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -138,7 +138,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-5.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-5.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -155,7 +155,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-6.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-6.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -209,7 +209,7 @@
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Recent Blog</h2>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(Images/image_1.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                   <div class="meta">
@@ -220,7 +220,7 @@
                 </div>
               </div>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(Images/image_2.jpg);"></a>
                 <div class="text">
                   <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                   <div class="meta">
