--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/IMG-20241020-WA0018.jpg'); margin-top: 74px;margin-top: 74px;" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('Images/IMG-20241020-WA0018.jpg'); margin-top: 74px;margin-top: 74px;" data-stellar-background-ratio="0.5">
       <div class="overlay" style="opacity:0.4"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -75,7 +75,7 @@
                   <div class="sppb-addon-content sppb-text-center">
                     <span class="sppb-img-container">
                       <a href="donate.html">
-                        <img class="sppb-img-responsive" src="images/Donating-and-Sponsoring-icon.png" alt="Donating / Sponsoring" loading="lazy">
+                        <img class="sppb-img-responsive" src="Images/Donating-and-Sponsoring-icon.png" alt="Donating / Sponsoring" loading="lazy">
                       </a>
                     </span>
                     <div class="sppb-media-content">
@@ -108,7 +108,7 @@
                   <div class="sppb-addon-content sppb-text-center">
                     <span class="sppb-img-container">
                       <a href="contact.html">
-                        <img class="sppb-img-responsive" src="images/about.png" alt="Becoming a Volunteer" loading="lazy">
+                        <img class="sppb-img-responsive" src="Images/about.png" alt="Becoming a Volunteer" loading="lazy">
                       </a>
                     </span>
                     <div class="sppb-media-content">
@@ -141,7 +141,7 @@
                   <div class="sppb-addon-content sppb-text-center">
                     <span class="sppb-img-container">
                       <a href="gallery.html">
-                        <img class="sppb-img-responsive" src="images/Gallery.png" alt="Events" loading="lazy"></a>
+                        <img class="sppb-img-responsive" src="Images/Gallery.png" alt="Events" loading="lazy"></a>
                       </span><div class="sppb-media-content">
                           <h3 class="sppb-addon-title sppb-feature-box-title"><a href="gallery.html">Gallery</a>
                           </h3><div class="sppb-addon-text"></div></div></div></div>
@@ -156,7 +156,7 @@
           <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 d-flex services p-3 py-4 d-block">
               <div class="media-body pl-4">
-                <img  src="images/PHOTO-2024-10-27-20-32-01(1).jpg" style="width:100%;height: 344px;"></img>
+                <img  src="Images/PHOTO-2024-10-27-20-32-01(1).jpg" style="width:100%;height: 344px;"></img>
                 <h3 class="heading">Fr. Paulson Mathew</h3>
                 <p>Director</br>
                 Kerala cultural centre</p>
@@ -166,7 +166,7 @@
           <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 d-flex services p-3 py-4 d-block">
               <div class="media-body pl-4">
-                <img  src="images/johnson.png" style="width:100%;height: 344px;"></img>
+                <img  src="Images/johnson.png" style="width:100%;height: 344px;"></img>
                 <h3 class="heading">Johnson</h3>
                 <p>President</br>
                 Kerala cultural centre</p>
@@ -176,7 +176,7 @@
           <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 d-flex services p-3 py-4 d-block">
               <div class="media-body pl-4">
-                <img  src="images/PHOTO-2024-10-27-20-35-15.jpg" style="width:100%;height: 344px;"></img>
+                <img  src="Images/PHOTO-2024-10-27-20-35-15.jpg" style="width:100%;height: 344px;"></img>
                  <h3 class="heading">Sivankutty K N</h3>
                 <p>Secretary</br>
                 Kerala cultural centre</p>
@@ -186,7 +186,7 @@
           <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 d-flex services p-3 py-4 d-block">
               <div class="media-body pl-4">
-                <img  src="images/PHOTO-2024-10-27-20-32-01.jpg" style="width:100%;    height: 344px;"></img>
+                <img  src="Images/PHOTO-2024-10-27-20-32-01.jpg" style="width:100%;    height: 344px;"></img>
                 <h3 class="heading">SanilKumar</h3>
                 <p>Treasurer</br>
                 Kerala cultural centre</p>
@@ -208,7 +208,7 @@
     				<div class="carousel-cause owl-carousel">
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/cause-1.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(Images/cause-1.jpg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Onam Celebration in oldage home</a></h3>
 		    						<!-- <span class="donation-time mb-3 d-block">Last donation 1w ago</span> -->
@@ -221,7 +221,7 @@
 	    				</div>
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/PHOTO-2024-10-20-19-27-33.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(Images/PHOTO-2024-10-20-19-27-33.jpg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Medical Camp</a></h3>
 		    						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -235,7 +235,7 @@
 	    				</div>
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/PHOTO-2024-10-20-19-27-29.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(Images/PHOTO-2024-10-20-19-27-29.jpg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Diaper Distribution</a></h3>
 		    						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -249,7 +249,7 @@
 	    				</div>
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/PHOTO-2024-10-20-19-27-30.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(Images/PHOTO-2024-10-20-19-27-30.jpg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Medical Help</a></h3>
 		    						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -263,7 +263,7 @@
 	    				</div>
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/IMG-20220615-WA0033.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(Images/IMG-20220615-WA0033.jpg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Food Item Distribution</a></h3>
 		    						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -277,7 +277,7 @@
 	    				</div>
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/IMG20240619123730.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(Images/IMG20240619123730.jpg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Reading Day</a></h3>
 		    						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -307,7 +307,7 @@
         	<div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
         			<div class="d-flex mb-4">
-        				<div class="img" style="background-image: url(images/person_1.jpg);"></div>
+        				<div class="img" style="background-image: url(Images/person_1.jpg);"></div>
         				<div class="info ml-4">
         					<h3><a href="teacher-single.html">Ivan Jacobson</a></h3>
         					<span class="position">Donated Just now</span>
@@ -321,7 +321,7 @@
         	<div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
         			<div class="d-flex mb-4">
-        				<div class="img" style="background-image: url(images/person_2.jpg);"></div>
+        				<div class="img" style="background-image: url(Images/person_2.jpg);"></div>
         				<div class="info ml-4">
         					<h3><a href="teacher-single.html">Ivan Jacobson</a></h3>
         					<span class="position">Donated Just now</span>
@@ -335,7 +335,7 @@
         	<div class="col-lg-4 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
         			<div class="d-flex mb-4">
-        				<div class="img" style="background-image: url(images/person_3.jpg);"></div>
+        				<div class="img" style="background-image: url(Images/person_3.jpg);"></div>
         				<div class="info ml-4">
         					<h3><a href="teacher-single.html">Ivan Jacobson</a></h3>
         					<span class="position">Donated Just now</span>
@@ -352,44 +352,44 @@
 
     <!-- <section class="ftco-gallery">
     	<div class="d-md-flex">
-	    	<a href="images/cause-2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-2.jpg);">
+	    	<a href="Images/cause-2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/cause-2.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/cause-3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-3.jpg);">
+	    	<a href="Images/cause-3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/cause-3.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/cause-4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-4.jpg);">
+	    	<a href="Images/cause-4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/cause-4.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/cause-5.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-5.jpg);">
+	    	<a href="Images/cause-5.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/cause-5.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
     	</div>
     	<div class="d-md-flex">
-	    	<a href="images/cause-6.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-6.jpg);">
+	    	<a href="Images/cause-6.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/cause-6.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/image_3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_3.jpg);">
+	    	<a href="Images/image_3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/image_3.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/image_1.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_1.jpg);">
+	    	<a href="Images/image_1.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/image_1.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/image_2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_2.jpg);">
+	    	<a href="Images/image_2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/image_2.jpg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
@@ -408,7 +408,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/image_1.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -423,7 +423,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/image_2.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -438,7 +438,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/image_3.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -465,7 +465,7 @@
         <div class="row">
         	<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-1.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-1.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -482,7 +482,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-2.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-2.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
@@ -499,7 +499,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry align-self-stretch">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/event-3.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('Images/event-3.jpg');">
               </a>
               <div class="text p-4 d-block">
               	<div class="meta mb-3">
