--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,6 @@
           <div class="col-md-3">
             <p><span>Email:</span> <a href="mailto:keralaculturalcenter@gmail.com">keralaculturalcenter@gmail.com</a></p>
           </div>
-          <!-- <div class="col-md-3">
-            <p><span>Website</span> <a href="#">yoursite.com</a></p>
-          </div> -->
         </div>
         <div class="row block-9">
           <div class="col-md-6 pr-md-5">
@@ -109,11 +106,8 @@
           
           </div>
 
-          <!-- <div class="col-md-6" id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.084971818117!2d76.48544777407588!3d9.843230575714603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07d900346fc61b%3A0xe8d884822e6eaec5!2sKerala%20Cultural%20Centre!5e0!3m2!1sen!2sin!4v1729573197486!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div> -->
           <div class="google-map col-md-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d205.06396816754273!2d76.48780145022573!3d9.843155365244753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d9.843246255866982!2d76.48800500062211!5e1!3m2!1sen!2sin!4v1730529240907!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d584.3589371548723!2d76.48791043262656!3d9.843422773398961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07d9000f05e20d%3A0xdabdf3ef6eb41ccc!2sKerala%20cultural%20centre%20(charitable%20society%20)!5e0!3m2!1sen!2sin!4v1735572749032!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
