--- a/gallery.html
+++ b/gallery.html
@@ -78,41 +78,41 @@
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="Images/img3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img3.jpg);">
+		    	<a href="Images/img3.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img3.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="Images/img4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img4.jpg);">
+		    	<a href="Images/img4.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img4.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
 	    	</div>
 	    	<div class="d-md-flex">
-		    	<a href="Images/img5.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img5.jpg);">
+		    	<a href="Images/img5.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img5.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="Images/img6.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img6.jpg);">
+		    	<a href="Images/img6.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img6.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="Images/img7.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img7.jpg);">
+		    	<a href="Images/img7.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img7.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="Images/img8.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img8.jpg);">
+		    	<a href="Images/img8.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img8.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
 		    </div>
 		    <div class="d-md-flex">
-		    	<a href="Images/img9.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img9.jpg);">
+		    	<a href="Images/img9.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img9.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
@@ -127,7 +127,7 @@
 		    			<span class="icon-search"></span>
 		    		</div>
 		    	</a>
-		    	<a href="Images/img12.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img12.jpg);">
+		    	<a href="Images/img12.JPG" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(Images/img12.JPG);">
 		    		<div class="icon d-flex justify-content-center align-items-center">
 		    			<span class="icon-search"></span>
 		    		</div>
